--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Jquery CDN -->
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
-  <title>Covid something</title>
+  <title>Personal COVID Tracker</title>
 </head>
 <body>
   <script src="assets/script.js"></script>
