Search function with api of cases functional

--- a/index.html
+++ b/index.html
@@ -1,17 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- AJAX CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- Jquery CDN -->
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
-  <title>Personal COVID Tracker</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Add non-bootstrap css framework -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href="assets/style.css">
+
+    <!-- Google maps api -->
+    <script defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs01d715oubUTbz2ZrZSYWVH-k7N9n9xI&libraries=places&callback=initMap">
+        </script>
+
+    <!-- AJAX CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Jquery CDN -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+
+    <title>COVID-19 Tracker</title>
 </head>
+
 <body>
-  <script src="assets/script.js"></script>
+
+    <!-- Navbar-->
+    <nav class="navbar has-background-danger" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <div class="navbar-item is-size-1">
+                <span class="icon mr-5">
+                    <i class="fas fa-home"></i>
+                </span>
+                <h1 class="is-size-2">COVID-19 Tracker</h1>
+            </div>
+
+            <!-- Navbar Burger Icon -->
+            <a role="button" class="navbar-burger nav-toggle" id="nav-toggle" aria-label="menu" aria-expanded="false"
+                data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+
+        </div>
+
+        <!-- Navbar Menu -->
+        <div id="navbarBasicExample" class="navbar-menu" id="nav-menu">
+            <div class="navbar-start">
+                <a class="navbar-item" href="index.html">Home</a>
+                <a class="navbar-item" href="docs.html">Documentation</a>
+                <a class="navbar-item" href="about.html">About</a>
+            </div>
+        </div>
+
+        <!-- Search in Navbar -->
+        <!-- <div class="navbar-end">
+			<div class="navbar-item">
+				<div class="level-item">
+					<div class="field has-addons">
+						<p class="control">
+							<input class="input is-rounded" type="text" placeholder="Search city name">
+						</p>
+						<p class="control">
+							<button class="button is-primary is-rounded">
+								<i class="fas fa-search"></i>
+							</button>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div> -->
+
+        </div>
+    </nav>
+
+
+    <!-- Standalone Search -->
+    <div class="level-left m-3">
+        <div class="field has-addons">
+            <p class="control">
+                <!-- <input class="input" id="findState"> -->
+                <input class="input is-rounded" id="findState" type="text" placeholder="Search city name">
+            </p>
+            <p class="control">
+                <button class="button is-primary is-rounded" id="search-button">
+                    <i class="fas fa-search"></i>
+                </button>
+            </p>
+        </div>
+        <h1>
+            <!-- <strong><- Input your address here!</strong> -->
+            <strong>Covid Information Mega Ultra Search Tool</strong>
+            <!-- <strong><- Input your address here!</strong> -->
+        </h1>
+    </div>
+
+    <!-- <div class="field">
+        <div class="control">
+            <input class="input is-medium" type="text" placeholder="Medium input">
+            <button class="button is-primary is-rounded">
+                <span class="icon-text">
+                    <span class="icon">
+                        <i class="fas fa-search"></i>
+                    </span>
+                </span>
+            </button>
+        </div>
+    </div> -->
+
+
+    <div class="tile">
+
+        <div class="tile is-parent is-vertical is-4">
+
+            <!-- Search in tile -->
+            <!-- <article class="container tile is-child notification is-light">
+				<div class="field has-addons">
+					<p class="control">
+						<input class="input is-rounded" type="text" placeholder="Search city name">
+					</p>
+					<p class="control">
+						<button class="button is-primary is-rounded">
+							<i class="fas fa-search"></i>
+						</button>
+					</p>
+				</div>
+			</article> -->
+
+            <!-- City Info tile -->
+            <article class="container tile is-child notification is-info">
+                <h1 class="title">Covid Info</h1>
+                <h2 class="subtitle">Search city name here</h2>
+                <div class="city-info" id="covid-info">
+
+                </div>
+            </article>
+
+        </div>
+
+        <!-- Map tile -->
+        <div class="tile is-parent is-vertical">
+            <article class="container tile is-child notification is-danger">
+                <h1 class="title">Map</h1>
+                <h2 class="subtitle">With an image</h2>
+                <div id="map"></div>
+            </article>
+        </div>
+
+    </div>
+
+    <!-- <div class="tile">
+        <div class="tile is-vertical is-8">
+            <div class="tile">
+                <div class="tile is-parent is-vertical">
+
+                    <article class="tile is-child notification is-primary">
+                        <p class="title">Vertical...</p>
+                        <p class="subtitle">Top tile</p>
+                    </article>
+
+                    <article class="tile is-child notification is-warning">
+                        <p class="title">...tiles</p>
+                        <p class="subtitle">Bottom tile</p>
+                    </article>
+
+                </div>
+                <div class="tile is-parent">
+
+                    <article class="tile is-child notification is-info">
+                        <p class="title">Middle tile</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
+
+                </div>
+            </div>
+            <div class="tile is-parent">
+
+                <article class="tile is-child notification is-danger">
+                    <p class="title">Wide tile</p>
+                    <p class="subtitle">Aligned with the right tile</p>
+                    <div class="content"></div>
+                </article>
+
+            </div>
+        </div> -->
+
+    <!-- Bottom tile -->
+    <div class="tile is-parent is-vertical is-12">
+
+        <article class="tile is-child notification is-warning">
+            <div class="content">
+                <p class="title">City info</p>
+                <p class="subtitle">With even more content</p>
+                <div class="content"></div>
+            </div>
+        </article>
+
+    </div>
+
+
+    <div class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-content">
+            <!-- Any other Bulma elements you want -->
+        </div>
+        <button class="modal-close is-large" aria-label="close"></button>
+    </div>
+
+
+
+
+    <!-- Footer -->
+
+    <div class="tile is-parent is-vertical is-12">
+
+        <article class="tile is-child notification">
+            <div class="content">
+                <p class="subtitle"><strong>COVID-19 Tracker</strong> by Abuye Mamuye, Austin Woo, Muhammad A Khalid,
+                    Vincent Nguyen. The
+                    source code is licensed
+                    <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
+                </p>
+            </div>
+        </article>
+
+    </div>
+
+    <!-- <footer class="footer is-flex-grow-0 ">
+		<div class="content has-text-centered">
+			<p>
+				<strong>COVID-19 Tracker</strong> by Abuye Mamuye, Austin Woo, Muhammad A Khalid, Vincent Nguyen. The
+				source code is licensed
+				<a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
+			</p>
+		</div>
+	</footer> -->
+
+    <!--Add libraries here-->
+    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+    <script src="assets/script.js"></script>
+
 </body>
 
 </html>
