--- a/about.html
+++ b/about.html
@@ -9,11 +9,6 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 	<link rel="stylesheet" href="assets/style.css">
 
-	<!-- Google maps api -->
-	<script defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs01d715oubUTbz2ZrZSYWVH-k7N9n9xI&libraries=places&callback=initMap">
-		</script>
-
 	<!-- AJAX CDN -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -28,10 +23,11 @@
 	<nav class="navbar has-background-danger" role="navigation" aria-label="main navigation">
 		<div class="navbar-brand">
 			<div class="navbar-item is-size-1">
-				<span class="icon mr-5">
-					<i class="fas fa-home"></i>
-				</span>
-				<h1 class="is-size-2">COVID-19 Tracker</h1>
+				<img src="assets/images/logo_transparent.png" class="image has-ratio m-2" alt="logo">
+
+				<i>
+					<h1 class="is-size-2">COVID Maps</h1>
+				</i>
 			</div>
 
 			<!-- Navbar Burger Icon -->
@@ -45,7 +41,8 @@
 		</div>
 
 		<!-- Navbar Menu -->
-		<div id="navbarBasicExample" class="navbar-menu" id="nav-menu">
+		<div id="navbarBasicExample" class="navbar-menu">
+			<!-- removed nav-bar id since another id exists -->
 			<div class="navbar-start">
 				<a class="navbar-item" href="index.html">Home</a>
 				<a class="navbar-item" href="docs.html">Documentation</a>
@@ -55,9 +52,10 @@
 
 	</nav>
 
-	<div class="tile is-ancestor">
+	<div class="tile">
 		<div class="tile is-parent">
 			<article class="tile is-child notification is-primary">
+				<img src="https://via.placeholder.com/150">
 				<p class="title">Abuye Mamuye</p>
 				<p>About me</p>
 			</article>
@@ -65,6 +63,7 @@
 
 		<div class="tile is-parent">
 			<article class="tile is-child notification is-primary">
+				<img src="https://via.placeholder.com/150">
 				<p class="title">Austin Woo</p>
 				<p>About me</p>
 			</article>
@@ -72,6 +71,7 @@
 
 		<div class="tile is-parent">
 			<article class="tile is-child notification is-primary">
+				<img src="https://via.placeholder.com/150">
 				<p class="title">Muhammad A Khalid</p>
 				<p>About me</p>
 			</article>
@@ -79,10 +79,23 @@
 
 		<div class="tile is-parent">
 			<article class="tile is-child notification is-primary">
+				<img src="https://via.placeholder.com/150">
 				<p class="title">Vincent Nguyen</p>
 				<p>About me</p>
 			</article>
 		</div>
+	</div>
+	<div class="tile is-parent is-12">
+
+		<strong>
+			<p>In today’s society, many people are woefully uninformed regarding COVID-19. We want to help people be
+				more
+				aware of COVID-19, showcase current statistics of Covid in a given area, and provide important
+				information
+				to the public. We hope to provide the necessary resources to enlighten users of the real threat of
+				COVID-19.
+			</p>
+		</strong>
 	</div>
 
 
@@ -91,10 +104,9 @@
 	<div class="tile is-parent is-vertical is-12">
 
 		<article class="tile is-child notification">
-			<div class="content">
-				<p class="subtitle"><strong>COVID-19 Tracker</strong> by Abuye Mamuye, Austin Woo, Muhammad A Khalid,
-					Vincent Nguyen. The
-					source code is licensed
+			<div class="content has-text-centered">
+				<p class="subtitle has-text-grey-light">COVID-19 Tracker by Abuye Mamuye, Austin Woo, Muhammad A Khalid,
+					Vincent Nguyen. The source code is licensed
 					<a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
 				</p>
 			</div>
