--- a/docs.html
+++ b/docs.html
@@ -9,11 +9,6 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 	<link rel="stylesheet" href="assets/style.css">
 
-	<!-- Google maps api -->
-	<script defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs01d715oubUTbz2ZrZSYWVH-k7N9n9xI&libraries=places&callback=initMap">
-		</script>
-
 	<!-- AJAX CDN -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -28,10 +23,11 @@
 	<nav class="navbar has-background-danger" role="navigation" aria-label="main navigation">
 		<div class="navbar-brand">
 			<div class="navbar-item is-size-1">
-				<span class="icon mr-5">
-					<i class="fas fa-home"></i>
-				</span>
-				<h1 class="is-size-2">COVID-19 Tracker</h1>
+				<img src="assets/images/logo_transparent.png" class="image has-ratio m-2" alt="logo">
+
+				<i>
+					<h1 class="is-size-2">COVID Maps</h1>
+				</i>
 			</div>
 
 			<!-- Navbar Burger Icon -->
@@ -45,7 +41,8 @@
 		</div>
 
 		<!-- Navbar Menu -->
-		<div id="navbarBasicExample" class="navbar-menu" id="nav-menu">
+		<div id="navbarBasicExample" class="navbar-menu">
+			<!-- removed nav-bar id since another id exists -->
 			<div class="navbar-start">
 				<a class="navbar-item" href="index.html">Home</a>
 				<a class="navbar-item" href="docs.html">Documentation</a>
@@ -53,36 +50,47 @@
 			</div>
 		</div>
 
-		<!-- Search in Navbar -->
-		<!-- <div class="navbar-end">
-			<div class="navbar-item">
-				<div class="level-item">
-					<div class="field has-addons">
-						<p class="control">
-							<input class="input is-rounded" type="text" placeholder="Search city name">
-						</p>
-						<p class="control">
-							<button class="button is-primary is-rounded">
-								<i class="fas fa-search"></i>
-							</button>
-						</p>
-					</div>
-				</div>
-			</div>
-		</div> -->
-
 		</div>
 	</nav>
+
+	<div class="container">
+		<div class="tile is-parent is-vertical">
+			<article class="tile is-child notification is-success">
+				<p class="title">how to use</p>
+
+			</article>
+		</div>
+
+		<div class="tile is-parent is-vertical">
+			<article class="tile is-child notification is-success">
+				<p class="title">API's Used</p>
+				<h2>1.
+					https://developer.here.com/documentation/geocoding-search-api/dev_guide/topics-api/code-geocode-hybrid.html
+				</h2>
+				<h2>2. https://maps.googleapis.com/maps/api/place/findplacefromtext/json?input=&inputtype=textquery&key=
+				</h2>
+				<h2>3. https://coronavirus-smartable.p.rapidapi.com/stats/v1/US/?rapidapi-key=</h2>
+
+
+			</article>
+		</div>
+
+		<div class="tile is-parent is-vertical">
+			<article class="tile is-child notification is-success">
+				<p class="title">Libraries</p>
+			</article>
+		</div>
+	</div>
+
 
 	<!-- Footer -->
 
 	<div class="tile is-parent is-vertical is-12">
 
 		<article class="tile is-child notification">
-			<div class="content">
-				<p class="subtitle"><strong>COVID-19 Tracker</strong> by Abuye Mamuye, Austin Woo, Muhammad A Khalid,
-					Vincent Nguyen. The
-					source code is licensed
+			<div class="content has-text-centered">
+				<p class="subtitle has-text-grey-light"> COVID-19 Tracker by Abuye Mamuye, Austin Woo, Muhammad A
+					Khalid, Vincent Nguyen. The source code is licensed
 					<a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
 				</p>
 			</div>
