--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 
 <head>
 
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Add non-bootstrap css framework -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="assets/style.css">
-
-    <!-- Google maps api -->
-    <script defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs01d715oubUTbz2ZrZSYWVH-k7N9n9xI&libraries=places&callback=initMap">
-        </script>
+    <!--cdn script for chart.js-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
     <!-- AJAX CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -22,19 +20,21 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
-    <title>COVID-19 Tracker</title>
+    <link rel="icon" href="assets/images/favicon.png" type="image/png" />
+    <title>COVID-19 Maps</title>
 </head>
 
 <body>
-
     <!-- Navbar-->
     <nav class="navbar has-background-danger" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <div class="navbar-item is-size-1">
-                <span class="icon mr-5">
-                    <i class="fas fa-home"></i>
-                </span>
-                <h1 class="is-size-2">COVID-19 Tracker</h1>
+
+                <img src="assets/images/logo_transparent.png" class="image has-ratio m-2" alt="logo">
+
+                <i>
+                    <h1 class="is-size-2"> COVID Maps</h1>
+                </i>
             </div>
 
             <!-- Navbar Burger Icon -->
@@ -48,7 +48,8 @@
         </div>
 
         <!-- Navbar Menu -->
-        <div id="navbarBasicExample" class="navbar-menu" id="nav-menu">
+        <div id="navbarBasicExample" class="navbar-menu">
+            <!-- removed nav-bar id since another id exists -->
             <div class="navbar-start">
                 <a class="navbar-item" href="index.html">Home</a>
                 <a class="navbar-item" href="docs.html">Documentation</a>
@@ -56,25 +57,6 @@
             </div>
         </div>
 
-        <!-- Search in Navbar -->
-        <!-- <div class="navbar-end">
-			<div class="navbar-item">
-				<div class="level-item">
-					<div class="field has-addons">
-						<p class="control">
-							<input class="input is-rounded" type="text" placeholder="Search city name">
-						</p>
-						<p class="control">
-							<button class="button is-primary is-rounded">
-								<i class="fas fa-search"></i>
-							</button>
-						</p>
-					</div>
-				</div>
-			</div>
-		</div> -->
-
-        </div>
     </nav>
 
 
@@ -82,8 +64,7 @@
     <div class="level-left m-3">
         <div class="field has-addons">
             <p class="control">
-                <!-- <input class="input" id="findState"> -->
-                <input class="input is-rounded" id="findState" type="text" placeholder="Search city name">
+                <input class="input is-rounded" id="search-term" type="text" placeholder="city, state name">
             </p>
             <p class="control">
                 <button class="button is-primary is-rounded" id="search-button">
@@ -92,9 +73,7 @@
             </p>
         </div>
         <h1>
-            <!-- <strong><- Input your address here!</strong> -->
             <strong>Covid Information Mega Ultra Search Tool</strong>
-            <!-- <strong><- Input your address here!</strong> -->
         </h1>
     </div>
 
@@ -135,7 +114,7 @@
                 <h1 class="title">Covid Info</h1>
                 <h2 class="subtitle">Search city name here</h2>
                 <div class="city-info" id="covid-info">
-
+                    <canvas id="myChart" width="200" height="200"></canvas>
                 </div>
             </article>
 
@@ -143,10 +122,11 @@
 
         <!-- Map tile -->
         <div class="tile is-parent is-vertical">
-            <article class="container tile is-child notification is-danger">
-                <h1 class="title">Map</h1>
-                <h2 class="subtitle">With an image</h2>
-                <div id="map"></div>
+
+            <article class="container tile is-child notification is-primary">
+                <!-- <h1 class="title">Map</h1>
+				<h2 class="subtitle">With an image</h2> -->
+                <div id='map'></div>
             </article>
         </div>
 
@@ -198,7 +178,7 @@
             <div class="content">
                 <p class="title">City info</p>
                 <p class="subtitle">With even more content</p>
-                <div class="content"></div>
+                <div class="content" id="testingSites"></div>
             </div>
         </article>
 
@@ -213,34 +193,21 @@
         <button class="modal-close is-large" aria-label="close"></button>
     </div>
 
-
-
-
     <!-- Footer -->
 
     <div class="tile is-parent is-vertical is-12">
 
         <article class="tile is-child notification">
-            <div class="content">
-                <p class="subtitle"><strong>COVID-19 Tracker</strong> by Abuye Mamuye, Austin Woo, Muhammad A Khalid,
-                    Vincent Nguyen. The
-                    source code is licensed
+            <div class="content has-text-centered">
+                <p class="subtitle has-text-grey-light">
+                    COVID-19 Tracker by Abuye Mamuye, Austin Woo, Muhammad A Khalid, Vincent Nguyen. The source code is
+                    licensed
                     <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
                 </p>
             </div>
         </article>
 
     </div>
-
-    <!-- <footer class="footer is-flex-grow-0 ">
-		<div class="content has-text-centered">
-			<p>
-				<strong>COVID-19 Tracker</strong> by Abuye Mamuye, Austin Woo, Muhammad A Khalid, Vincent Nguyen. The
-				source code is licensed
-				<a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
-			</p>
-		</div>
-	</footer> -->
 
     <!--Add libraries here-->
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
